--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,3 +157,14 @@ footer {
     text-decoration: none; /* Remove underline on hover */
   }
   
+  /* Text Box Styles */
+.textbox {
+  border: 4px solid grey; /* Border color */
+  padding: 40px; /* Padding inside the text box */
+  margin-bottom: 20px; /* Spacing between text boxes */
+}
+
+#bio p {
+  line-height: 1.3;
+  margin: 0; /* Remove default margins to avoid extra spacing */
+}
