--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,7 +49,7 @@ body {
     height: 150px; /* Adjust the size as needed */
     object-fit: cover;
     margin-bottom: 20px;
-    border: 4px solid wheat; /* Optional: Add a border to the profile picture */
+    border: 4px grey; /* Optional: Add a border to the profile picture */
   }
   
   #bio p {
